--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 
     </head>
     <body>
-        <div>
-            <img src="images/irfaig.jpg" alt="profile image" />
-            <h2>Irfa Ramadhanti</h2>
+        <div id="profile-container">
+            <img id="profile-image" src="images/irfaig.jpg" alt="profile image" />
+            <h2 id="profile-name">Irfa Ramadhanti</h2>
         </div>
     </body>
 
